Fixes #268 icon spacing issue

--- a/src/modules/dropdown.less
+++ b/src/modules/dropdown.less
@@ -88,14 +88,14 @@
 ---------------*/
 
 .ui.dropdown > .dropdown.icon {
+  float: right;
   width: auto;
-  margin: 0em 0em 0em 0.5em;
+  margin: 0em 0em 0em 1em;
 }
 
 .ui.dropdown > .dropdown.icon:before {
   content: "\f0d7";
 }
-
 .ui.dropdown .menu .item .dropdown.icon {
   width: auto;
   float: right;
@@ -320,8 +320,6 @@
   display: none;
 }
 .ui.selection.dropdown > .dropdown.icon {
-  float: right;
-
   opacity: 0.7;
   margin: 0.2em 0em 0.2em 1.25em;
 
